--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -61,6 +61,33 @@
         --iw-color-shieldErrorShadow: #FEF2F2;
         --iw-color-shieldLoadingShadow: #f6dfbe;
     }
+    [class="CAR_theme"] {
+        --iw-font-base: "Inter", sans-serif;
+        --iw-color-background: #FFFFFF;
+        --iw-color-header: #000000;
+        --iw-color-footer: #FFFFFF;
+        --iw-color-title: #000000;
+        --iw-color-subTitle: #717171;
+        --iw-color-searchTitle: #3E3E3E;
+        --iw-color-primary: #278834;
+        --iw-color-helpAccordionHover: #e0e0e0;
+        --iw-color-shadow: #18479329;
+        --iw-color-spinningLoaderPrimary: #278834;
+        --iw-color-spinningLoaderSecondary: #EEF5EF;
+        --iw-color-navigationBar: #EEF5EF;
+        --iw-color-languageGlobeIcon: #278834;
+        --iw-color-languageArrowIcon: #278834;
+        --iw-color-languageCheckIcon: #278834;
+        --iw-color-closeIcon: #8E8E8E ;
+        --iw-color-searchIcon: #8E8E8E;
+        --iw-color-tileBackground: #FFFFFF;
+        --iw-color-shieldSuccessIcon: #4b9d1f;
+        --iw-color-shieldErrorIcon: #EF4444;
+        --iw-color-shieldLoadingIcon: #ff914b;
+        --iw-color-shieldSuccessShadow: #f1f7ee;
+        --iw-color-shieldErrorShadow: #FEF2F2;
+        --iw-color-shieldLoadingShadow: #f6dfbe;
+    }
 }
 
 @layer components {
