[INJIWEB-1513] in smaller screen make changes to show hamburger menu with different menu items in the left side of dashboard header and fix the styles of different elements in the home and credentials screens
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -5,7 +5,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
     :root {
         --iw-font-base: "Inter", sans-serif;
@@ -22,6 +21,7 @@
         --iw-color-tertiary: #951F6F;
         --iw-color-helpAccordionHover: #e0e0e0;
         --iw-color-shadow: #18479329;
+        --iw-color-shadow-with-opacity: #1847930F;
         --iw-color-selected-shadow: #164EA840;
         --iw-color-spinningLoaderPrimary: #951F6F;
         --iw-color-spinningLoaderSecondary: #5B03AD;
