[INJIWEB-1533] fix the styles and colors of pin page to show it similar to what is provided in figma designs
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -49,6 +49,12 @@
         --iw-color-disclaimerText: #8B6105;
         --iw-color-dashboardSideBarMenuIcon: #6F6F6F;
         --iw-color-dashboardSideBarMenuIconActive: #2B011C;
+        --iw-color-grayLight: #C1C1C1;
+        --iw-color-grayDark: #676766;
+        --iw-color-grayTransparent: #D2D5D933;
+        --iw-color-textTertiary: #475467;
+        --iw-color-textSecondary: #344054;
+        --iw-color-darkRed: #D52929;
     }
     [class="emerald_theme"] {
         --iw-font-base: "Inter", sans-serif;
@@ -90,6 +96,12 @@
         --iw-color-subText: #A0A8AC;
         --iw-color-disclaimerBackGround: #FFF7E5;
         --iw-color-disclaimerText: #8B6105;
+        --iw-color-grayLight: #C1C1C1;
+        --iw-color-grayDark: #676766;
+        --iw-color-grayTransparent: #D2D5D933;
+        --iw-color-textTertiary: #475467;
+        --iw-color-textSecondary: #344054;
+        --iw-color-darkRed: #D52929;
     }
 }
 
@@ -107,5 +119,5 @@
     }
     .no-scroll {
         overflow: hidden;
-      }
+    }
 }
