[INJIWEB-1533] rename reset passcode to change passcode and update the translations for same in all locale files and update the padding and margins of text in pin page
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -55,6 +55,8 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-deepVioletIndigo: #5B03AD;
+        --iw-color-pink50: #FAEFEF;
     }
     [class="emerald_theme"] {
         --iw-font-base: "Inter", sans-serif;
@@ -102,6 +104,8 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-deepVioletIndigo: #5B03AD;
+        --iw-color-pink50: #FAEFEF;
     }
 }
 
