[INJIWEB-1533] design UI for resetting wallet if the user has forgotten the pin for the wallet and added translations for different messages in reset wallet page
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Gentium+Plus:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,6 +9,7 @@
 @layer base {
     :root {
         --iw-font-base: "Inter", sans-serif;
+        --iw-font-montserrat: "Montserrat", sans-serif;
         --iw-color-background: #FFFFFF;
         --iw-color-header: #000000;
         --iw-color-footer: #FFFFFF;
@@ -52,11 +54,13 @@
         --iw-color-grayLight: #C1C1C1;
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
+        --iw-color-paleGray: #F7F7F8;
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
+        --iw-color-dark-green: #101828;
     }
     [class="emerald_theme"] {
         --iw-font-base: "Inter", sans-serif;
@@ -101,11 +105,13 @@
         --iw-color-grayLight: #C1C1C1;
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
+        --iw-color-paleGray: #F7F7F8;
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
+        --iw-color-dark-green: #101828;
     }
 }
 
