--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -49,6 +49,8 @@
         --iw-color-disclaimerText: #8B6105;
         --iw-color-dashboardSideBarMenuIcon: #6F6F6F;
         --iw-color-dashboardSideBarMenuIconActive: #2B011C;
+        --iw-color-avatarPlaceholder: #DDDDDD;
+        --iw-color-avatarText: #1A001D;
     }
     [class="emerald_theme"] {
         --iw-font-base: "Inter", sans-serif;
