[INJIWEB-1519] add icons to menu items Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -58,6 +58,7 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-red: #DA262E;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
         --iw-color-dark-green: #101828;
@@ -112,6 +113,7 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-red: #DA262E;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
         --iw-color-dark-green: #101828;
