[INJIWEB-1557] make changes to store the credential type display obj into the active and download session to correctly display the credential type name based on the selected or default language
Signed-off-by: PuBHARGAVI <46226958+PuBHARGAVI@users.noreply.github.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -58,12 +58,14 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-brightRed: #D73E3E;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
-        --iw-color-dark-green: #101828;
+        --iw-color-darkGrayishBlue: #101828;
         --iw-color-info: #7B7B7B;
         --iw-color-avatarPlaceholder: #DDDDDD;
         --iw-color-avatarText: #1A001D;
+        --iw-color-darkGreen: #1F9F60;
     }
     [class="emerald_theme"] {
         --iw-font-base: "Inter", sans-serif;
@@ -112,9 +114,11 @@
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
+        --iw-color-brightRed: #D73E3E;
         --iw-color-deepVioletIndigo: #5B03AD;
         --iw-color-pink50: #FAEFEF;
-        --iw-color-dark-green: #101828;
+        --iw-color-darkGrayishBlue: #101828;
+        --iw-color-darkGreen: #1F9F60;
     }
 }
 
