[INJIWEB-1519] extract styles from menu into styles file
Signed-off-by: KiruthikaJeyashankar <kiruthikavjshankar@gmail.com>

--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -51,6 +51,7 @@
         --iw-color-disclaimerText: #8B6105;
         --iw-color-dashboardSideBarMenuIcon: #6F6F6F;
         --iw-color-dashboardSideBarMenuIconActive: #2B011C;
+        --iw-color-grayMedium: #707070;
         --iw-color-grayLight: #C1C1C1;
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
@@ -106,6 +107,7 @@
         --iw-color-subText: #A0A8AC;
         --iw-color-disclaimerBackGround: #FFF7E5;
         --iw-color-disclaimerText: #8B6105;
+        --iw-color-grayMedium: #707070;
         --iw-color-grayLight: #C1C1C1;
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
