--- a/inji-web/src/index.css
+++ b/inji-web/src/index.css
@@ -56,6 +56,7 @@
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
         --iw-color-paleGray: #F7F7F8;
+        --iw-color-gray74: #BDBDBD;
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
@@ -114,6 +115,7 @@
         --iw-color-grayDark: #676766;
         --iw-color-grayTransparent: #D2D5D933;
         --iw-color-paleGray: #F7F7F8;
+        --iw-color-gray74: #BDBDBD;
         --iw-color-textTertiary: #475467;
         --iw-color-textSecondary: #344054;
         --iw-color-darkRed: #D52929;
